--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-  </li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-  <% end %>
+<% flash.each do |key, value| %>
+  <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+<% end %>
+ 
+<%= link_to 'Home', main_app.root_path %>
+<%= link_to 'Forums', forem.forums_path %>
+ 
+<header>
+  <nav>
+    <% if user_signed_in? %>
+      <%= link_to current_user.email, main_app.edit_user_registration_path %>
+      | <%= link_to "Sign out", main_app.destroy_user_session_path, :method => :delete %>
+      <% if current_user.forem_admin %>
+        | <%= link_to "Administrate", forem.admin_root_url %>
+      <% end %>
+    <% else %>
+      <%= link_to "Sign up", main_app.new_user_registration_path %>
+      | <%= link_to "Sign in", main_app.new_user_session_path %>
+    <% end %>
+  </nav>
+</header>
 
 <%= yield %>
 
