--- a/app/views/forem/posts/_reply_to_post.html.erb
+++ b/app/views/forem/posts/_reply_to_post.html.erb
@@ -1,14 +1,14 @@
 <a name='post-<%= post.id %>'></a>
 <div id='post_<%= post.id %>' class='reply_to_post post <%= cycle('odd', 'even') -%> col-md-10'>
   <div class='user col-md-2'>
-    <div class='username'>
+   <div class='username'>
       <%= link_to_if Forem.user_profile_links, post.user.forem_name, [main_app, post.user] %>
     </div>
-    <div class='icon'><%= forem_avatar(post.user, :size => 60) %></div>
+    <div class='icon'><%= forem_avatar(post.user, :size => 40) %></div>
   </div>
 
   <div class='contents col-md-7'>
-    <time datetime="<%= post.created_at.to_s(:db) -%>"><%= "#{time_ago_in_words(post.created_at)} #{t("ago")}" %></time>
+    <br><time datetime="<%= post.created_at.to_s(:db) -%>"><%= "#{time_ago_in_words(post.created_at)} #{t("ago")}" %></time></br>
     <%= forem_format(post.text) %>
 
     <% if post.reply_to %>
