--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,3 @@
-home page.
+Welcome to the online communication Portal for Reading Recovery in Boston Public Schools. In the coming days and weeks, this site will be updated with additional features.
+
+If you have any problems, questions, comments or concerns, please let me know. Additionally, if you have any features that you'd like to see added to the site, please let me know.
