--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
   </li>
  <li> <%= link_to 'Home', main_app.root_path %></li>
  <li><%= link_to 'Forums', forem.forums_path %></li>
+ <li><%= link_to 'Your Students', main_app.students_path %></li>
+ 
+ 
 <% else %>
   <li>
   <%= link_to('Login', new_user_session_path)  %>  
