added students, student view unstyled

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,13 @@
-Students show view
+<div class="container">
+<h2>Students Data</h2>
+
+<br>
+<%= @student.first_name %> <%= @student.last_name %>
+</br>
+
+
+
+
+  
+
+
