--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,1 +1,34 @@
-Student Index View
+<div class="container">
+  <div class="row">
+   <div class="col-md-4">
+     <h1>Your Student List</h1>
+
+    
+
+			<% @students.each do |s| %>
+			<h2><%= link_to "#{s.first_name} #{s.last_name}", student_path(s) %></h2>
+			<% end %>
+		
+   </div>
+  <div class="col-md-4"> 
+  </div>
+
+  	<div class="col-md-4">
+		<%= simple_form_for @student do |f| %>
+  			<%= f.input :first_name %>
+  			<%= f.input :last_name %>
+  			<br>
+  			<%= f.button :submit %>
+  			<br>
+		<% end %>
+  	</div>
+
+
+    <div class="col-md-4"> 
+    </div>
+
+ </div>
+</div>
+
+ 
+
