Books work, but I'd like to have books show up on student/show

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -5,7 +5,26 @@
 <%= @student.first_name %> <%= @student.last_name %>
 </br>
 
+<%= render :partial => "books/form" %>
 
+
+<table class="table">
+ <caption> This will hold information about total lessons, average accuracy and current level</caption>
+ <thead>
+ 	<tr> 
+ 		<th>Book Level</th>
+ 		<th>Book Title</th>
+ 		<th>Accuracy</th>
+    </tr>
+ </thead>
+
+ <tbody>
+ 	<tr>
+ 		<td> </td>
+ 		<td></td>
+ 	</tr>
+ </tbody>
+</table>
 
 
   
