--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<table class="table">
 <p>
   <strong>Book name:</strong>
   <%= @book.book_name %>
@@ -36,4 +37,4 @@
  </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+
