--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Books for Current Student</h1>
+<h1>Books for Current Student </h1>
 
+<p>
+  Download:
+  <%= link_to "CSV", student_books_path(format: "csv") %> |
+  
 
+</p>
 
 <table class="table">
   <thead>
