you can now get to the student book views from the book/show pages

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,6 +1,7 @@
-<%= simple_form_for(@book) do |f| %>
+<%= simple_form_for(@book, html: {class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
+  
   <div class="form-inputs">
     <%= f.input :student_id, :as => :hidden, :input_html => { :value => @student.id } %>
     <%= f.input :book_name %>
@@ -11,6 +12,7 @@
 
 
   </div>
+  
 
   <div class="form-actions">
     <%= f.button :submit %>
