--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,41 +1,39 @@
 <div class="container">
-<h2>Students Data</h2>
+<h2>Student Data</h2>
 
 <br>
-<%= @student.first_name %> <%= @student.last_name %>
+<h3><%= @student.first_name %> <%= @student.last_name %></h3>
 </br>
 
+<div class="row">
+  <div class="col-md-2"> <%= render :partial => "books/form" %></div>
+  <div class="col-md-10">
+	<table class="table">
+	 <thead>
+	 	<tr> 
+	 		<th>Book Level</th>
+	 		<th>Book Title</th>
+	 		<th>Accuracy</th>
+	    </tr>
+	 </thead>
 
-<%= render :partial => "books/form" %>
+	 <tbody>
+	 	<% @books.each do |book| %>
+	      <tr>
+	        <td><%= book.book_name %></td>
+	        <td><%= book.book_level %></td>
+	        <td><%= book.total_words %></td>
+	        <td><%= book.words_wrong %></td>
+	        <td><%= book.self_corrections %></td>
+	        <td><%= link_to 'Show Book', book %></td>
+	        <td><%= link_to 'Modify Book', edit_book_path(book) %></td>
+	        <td><%= link_to 'Remove Book', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	      </tr>
+	    <% end %>
+	 </tbody>
+	</table>
 
-
-
-
-<table class="table">
- <caption> This will hold information about total lessons, average accuracy and current level</caption>
- <thead>
- 	<tr> 
- 		<th>Book Level</th>
- 		<th>Book Title</th>
- 		<th>Accuracy</th>
-    </tr>
- </thead>
-
- <tbody>
- 	<% @books.each do |book| %>
-      <tr>
-        <td><%= book.book_name %></td>
-        <td><%= book.book_level %></td>
-        <td><%= book.total_words %></td>
-        <td><%= book.words_wrong %></td>
-        <td><%= book.self_corrections %></td>
-        <td><%= link_to 'Show Book', book %></td>
-        <td><%= link_to 'Modify Book', edit_book_path(book) %></td>
-        <td><%= link_to 'Remove Book', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
- </tbody>
-</table>
+</div>
 
 
 
